Bug 1975949 - Add a testing pref to always hide scrollbars. r=layout-reviewers,dshin
Differential Revision: https://phabricator.services.mozilla.com/D256427

--- a/layout/style/res/scrollbars.css
+++ b/layout/style/res/scrollbars.css
@@ -227,3 +227,10 @@ scrollcorner {
     display: none;
   }
 }
+
+/* stylelint-disable-next-line media-query-no-invalid */
+@media -moz-pref("layout.testing.scrollbars.always-hidden") {
+  scrollbar {
+    opacity: 0 !important;
+  }
+}
